# clinica

./: .env.example  .gitignore  database.db  pyproject.toml  requirements.txt
clinica/: app.py
clinica/config/: database.py  log_config.py  security.py  settings.py
clinica/routes/: pacientes.py  users.py  version.py
clinica/src/enum/: etinia_enum.py  sexo_enum.py
clinica/src/models/: paciente.py  user.py
clinica/src/schemas/pacientes/: paciente_list.py  paciente_schema.py
clinica/src/schemas/users/: user_dto.py  user_list.py
migrations/: env.py
migrations/versions/: 4f966ce75116_create_users_table.py  5740b176d983_create_tables.py  73eff3e5b71a_create_tables_paciente_e_user.py
src/: app.py
src/enum/: sexo_enum.py
src/modules/alunos/: aluno_resource.py
src/modules/users/: user_resource.py  users.py
tests/: conftest.py  user_test.py
