[tool.poetry]
name = "clinica"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.0"}
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
loguru = "^0.7.2"
sqlalchemy = "^2.0.32"
build = "^1.2.1"
cython = "^3.0.11"
pydantic = {extras = ["email"], version = "^2.8.2"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"
taskipy = "^1.13.0"

[tool.ruff]
line-length = 85
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I','C','F','E','W','PL','PT'] 

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
rdev = 'fastapi dev src/app.py'
rdep = 'fastapi src/app.py'
test = 'pytest -S -X --cov=src -vv'
post_test = 'coverage html'
rf = 'ruff format .'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
